# aa-py-openpyxl-util

./: .gitignore  README.md  ci-constraints.txt  mypy.ini  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: mypy.yml  publish.yml  test.yml
aa_py_openpyxl_util/: __init__.py  _cells.py  _context.py  _data_util.py  _data_validation.py  _extract.py  _find_table.py  _iter_tables.py  _list_objects.py  _named_ranges.py  _open_locked_file.py  _typing.py  _workaround.py  _workarounds.py  _write_only.py  _written_tables_types.py
docs/dev/: gen_pages.py  mkdocs.yml
test/: test_doctests.py  test_extract.py  test_find_table.py  test_import_speed.py  test_iter_tables.py
test/context/: test_changed_builtin_number_formats.py
test/data_validation/: test_input_message.py
test/named_ranges/: test_define_named_ranges_for_dict_table.py
test/workaround/: test_remove_atexit_permission_error.py  test_save_workbook_workaround.py
test/write_only/: test_distribute_tables_over_multiple_sheets.py  test_formatted_cell.py  test_stack_table_rows_side_by_side.py  test_write_tables_side_by_side.py
test_data/: number_formats.xlsx  tables.xlsx
test_data/extract/: dates.xlsx  empty.xlsx
